--- a/3d-boxes-background/style.css
+++ b/3d-boxes-background/style.css
@@ -36,6 +36,19 @@ body {
   outline: none;
 }
 
+.input-magic {
+  margin-bottom: 100px;
+  width: 500px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+}
+
+.input-magic input {
+  padding: 12px 20px;
+  width: 100%;
+}
+
 .magic:active {
   box-shadow: none;
   transform: translateY(2px);
@@ -52,8 +65,8 @@ body {
 }
 
 .boxes.big {
-  width: 600px;
-  height: 600px;
+  width: 575px;
+  height: 575px;
 }
 
 .boxes.big .box {
@@ -61,12 +74,12 @@ body {
 }
 
 .box {
-  background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
+  background-image: url('./3c29f6682b28de768739.jpg');
   background-repeat: no-repeat;
   background-size: 500px 500px;
   position: relative;
-  height: 125px;
-  width: 125px;
+  height: 100px; 
+  width: 100px;
   transition: 0.4s ease;
 }
 
